# FinCrime.AML

./: Blog.md  Dockerfile  README.md  data_generator.py  env.py  inference.py  llm_judge.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  train.ipynb  validate-submission.sh
.github/workflows/: main.yml
server/: app.py
