[project]
name = "aml-fincrime-investigator"
version = "0.1.0"
description = "A Tier 1 Anti-Money Laundering (AML) alert investigation environment."
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"